--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,3 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
 a {
   font-weight: 500;
@@ -23,11 +9,10 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  margin: 1px;
+  width: 100%;
+  background-color: #242424; /* Fondo negro */
+  color: rgba(255, 255, 255, 0.87); /* Color del texto */
 }
 
 h1 {
@@ -58,6 +43,10 @@ button:focus-visible {
   :root {
     color: #213547;
     background-color: #ffffff;
+  }
+  body {
+    background-color: #ffffff; /* Fondo blanco en modo claro */
+    color: #213547; /* Color del texto en modo claro */
   }
   a:hover {
     color: #747bff;
